wpkg (0.9.9) trusty; urgency=high

  * Applied fix with -G command line option of cmake, missing space
    (by Yevgeny Krasovsky)

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 09 Mar 2015 04:23:06 -0700

wpkg (0.9.8.5~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Mon, 09 Mar 2015 04:23:06 -0700

wpkg (0.9.8.4~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Sun, 08 Mar 2015 04:25:34 -0700

wpkg (0.9.8.3~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Sat, 07 Mar 2015 04:25:58 -0800

wpkg (0.9.8.2~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Fri, 06 Mar 2015 04:23:52 -0800

wpkg (0.9.8.1~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Thu, 05 Mar 2015 04:23:12 -0800

wpkg (0.9.8) trusty; urgency=high

  * Removed "tags" exception so we can build a boost 1.53 package.

 -- R. Douglas Barbieri <doug@dooglio.net>  Wed, 04 Mar 2015 18:50:37 -0800

wpkg (0.9.7.5~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Wed, 04 Mar 2015 04:23:02 -0800

wpkg (0.9.7.4~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Tue, 03 Mar 2015 04:29:29 -0800

wpkg (0.9.7.3~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Mon, 02 Mar 2015 04:22:31 -0800

wpkg (0.9.7.2~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Sun, 01 Mar 2015 04:24:50 -0800

wpkg (0.9.7.1~trusty) trusty; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Sat, 28 Feb 2015 04:22:49 -0800

wpkg (0.9.7) trusty; urgency=high

  * Now no longer You no longer have to supply the "--repository" argument
	when installing from internal repositories (contents of core/sources.list).
	Once you've added a repository to your sources list, --install will